fix: adjust navbar dropdown position for better alignment

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ ul {
     height: 108px; 
     width: auto;
     position: absolute; 
-    top: -27px; 
+    top: -26px; 
     left: 0px;
     transition: transform 0.3s ease;
     filter: drop-shadow(0 5px 5px rgba(0,0,0,0.3));
